# MyPrarcel

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myprarcel/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DParcel.cpp  DParcel.h  com_example_myprarcel_Dparcel.h  native-lib.cpp
app/src/main/java/com/example/myprarcel/: Dparcel.java  MainActivity.java  Student.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myprarcel/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
